--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^1.0.8",
+    "axios": "^0.18.0",
+    "sweetalert2": "^7.24.4",
+    "vee-validate": "^2.1.0-beta.5",
     "vue": "^2.5.16",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
